@@ -39,7 +39,7 @@ public final class ConstantDouble extends Constant implements ConstantObject {
 
     @Override
     public Object getConstantValue(final ConstantPool cp) {
-        return new Double(bytes);
+        return Double.valueOf(bytes);
     }
 
     public void setBytes(final double bytes) {
