@@ -39,7 +39,7 @@ public final class ConstantFloat extends Constant implements ConstantObject {
 
     @Override
     public Object getConstantValue(final ConstantPool cp) {
-        return new Float(bytes);
+        return Float.valueOf(bytes);
     }
 
     public void setBytes(final float bytes) {
